--- a/markup/site/includes/themes/site-one/stylesheets/site.css
+++ b/markup/site/includes/themes/site-one/stylesheets/site.css
@@ -85,15 +85,15 @@ body,
 	Mobile menu
 ------------------------------------------------------------ */
 
-.mobile-menu {
+.responsive-menu {
 	color: #666666;
 }
-.mobile-menu .mobile-menu-button {
+.responsive-menu .responsive-menu-button {
 	display: block;
 	padding-left: 1.0em;
 	text-align: left;
 }
-.mobile-menu-button {
+.responsive-menu-button {
 	font-size: 1.5em;
 }
 
