FontAwesome updates, .htaccess directory slash update, new JavaScript randomize plugin, move jquery-ui draggable example

--- a/stylesheets/redlove/examples.css
+++ b/stylesheets/redlove/examples.css
@@ -197,18 +197,21 @@
 }
 
 .transform {
+	/* Horizontal and vertical */
 	-webkit-transform: translate(-50%, -50%);
 	-moz-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	-o-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	
+	/* Horizontal */
 	-webkit-transform: translateX(-50%);
 	-moz-transform: translateX(-50%);
 	-ms-transform: translateX(-50%);
 	-o-transform: translateX(-50%);
 	transform: translateX(-50%);
 	
+	/* Vertical */
 	-webkit-transform: translateY(-50%);
 	-moz-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
